# surge-plugin

./: .gitignore  CMakeLists.txt  MANUAL.md  Plugin.cmake  README.md
export/: Surge.rnbopat.cpp  description.json  presets.json
src/: CustomAudioEditor.cpp  CustomAudioEditor.h  CustomAudioProcessor.cpp
